added year parentheses

--- a/index.html
+++ b/index.html
@@ -26,14 +26,12 @@
     <footer>
         <p>&#169<span id="outputspan"></span> | Glen Meredith | Massachusetts | <a
                 href="https://www.byui.edu/online"><u>BYUI Online Learning</u></a></p>
-        <script>
-
-        </script>
+        
     </footer>
 </body>
 <script>
     function getDate() {
-        let d = new Date().getFullYear;
+        let d = new Date().getFullYear();
         document.getElementById("outputspan").innerHTML = d;
     }
     getDate();
