deleted last modified parentheses

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     }
     getDate();
     function getModified() {
-        let m = document.lastModified();
+        let m = document.lastModified;
         document.getElementById("lastmod").innerHTML = m;
     }
     getModified();
