--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="portalstyle.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
@@ -26,7 +27,7 @@
     <footer>
         <p>&#169 <span id="outputspan"></span> | Glen Meredith | Massachusetts | <a
                 href="https://www.byui.edu/online"><u>BYUI Online Learning</u></a></p>
-        <p>Last Modified: <span id="lastmod"></span></p>
+        <p class="makeyellow">Last Modified: <span id="lastmod"></span></p>
     </footer>
 </body>
 <script>
