comment out stylesheet paste css directly in

--- a/index.html
+++ b/index.html
@@ -2,13 +2,49 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="portalstyle.css">
+    <!--<link rel="stylesheet" href="portalstyle.css">-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="This is the page for Glen Meredith to post assignments completed for the WDD 230 class at BYUI. ">
     <title>Glen's WDD_230 Portal Home Page</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
 
+        header {
+            background-color: #643219;
+            border-radius: 25px;
+
+        }
+
+        header h1 {
+            color: white;
+            font-size: 4em;
+
+
+        }
+
+        header img {}
+
+        main {}
+
+        main h2 {
+            font-size: 2em;
+            font-weight: bold;
+        }
+
+        footer {
+            background-color: #643219;
+            border-radius: 25px;
+            color: white;
+        }
+
+        .makeyellow {
+            color: #cba811;
+        }
+    </style>
 </head>
 
 <body>
