--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         header img {
             grid-column: 4 / 5;
-            box-shadow: 1em 1em gray, -1em -1em gray;
+            box-shadow: 6px 6px 15px 15px gray, -6px -6px 15px 15px gray;
         }
 
         main {}
