--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
+            max-width: 900px;
+            margin: 0 auto;
+            padding: 1em;
         }
 
         header {
@@ -23,14 +26,17 @@
 
         header h1 {
             color: white;
-            font-size: 4em;
+            font-size: 3em;
+            grid-column: 1 / 4;
+            text-align: center;
 
 
         }
 
         header img {
             grid-column: 4 / 5;
-            box-shadow: 6px 6px 15px 15px gray, -6px -6px 15px 15px gray;
+            box-shadow: 4px 4px 5px 5px gray, -4px -4px 5px 5px gray;
+            margin-top: 7px;
         }
 
         main {}
@@ -44,6 +50,8 @@
             background-color: #643219;
             border-radius: 15px;
             color: white;
+            text-align: center;
+            font-size: .5em;
         }
 
         .makeyellow {
