--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <head>
     <link rel="stylesheet" href="css/normalize.css">
-    <!--<link rel="stylesheet" href="portalstyle.css">-->
+    <!--<link rel="stylesheet" href="css/portalstyle.css">-->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
@@ -11,10 +13,12 @@
     <title>Glen's WDD_230 Portal Home Page</title>
     <style>
         body {
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: 'Nunito Sans', Arial, Helvetica, sans-serif;
             max-width: 900px;
             margin: 0 auto;
             padding: 1em;
+            color: #4b4b4b;
+            
         }
 
         header {
@@ -48,6 +52,7 @@
         main h2 {
             font-size: 2em;
             font-weight: bold;
+            border-bottom: 1px solid black;
         }
 
         footer {
@@ -56,10 +61,16 @@
             color: white;
             text-align: center;
             font-size: .75em;
+            height: 4em;
         }
-
+        .footerlong {
+            margin-bottom: 0px;
+            padding-top: .75em;
+        }
         .makeyellow {
             color: #cba811;
+            margin-top: 0px;
+            padding-top: .5em;
         }
     </style>
 </head>
@@ -67,7 +78,7 @@
 <body>
     <header>
         <h1>Glen Meredith</h1>
-        <img src="Webp.net-resizeimage.jpg" alt="Glen smiling">
+        <img src="images/Webp.net-resizeimage.jpg" alt="Glen smiling">
     </header>
     <main>
         <h2>WDD 230: Assignment Portal</h2>
@@ -78,7 +89,7 @@
         </ul>
     </main>
     <footer>
-        <p>&#169 <span id="outputspan"></span> | Glen Meredith | Massachusetts | <a
+        <p class="footerlong">&#169 <span id="outputspan"></span> | Glen Meredith | Massachusetts | <a
                 href="https://www.byui.edu/online"><u>BYUI Online Learning</u></a></p>
         <p class="makeyellow">Last Modified: <span id="lastmod"></span></p>
     </footer>
