--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="css/normalize.css">
-    <!--<link rel="stylesheet" href="css/portalstyle.css">-->
+    <link rel="stylesheet" href="css/portalstyle.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
@@ -11,14 +11,14 @@
     <meta name="description"
         content="This is the page for Glen Meredith to post assignments completed for the WDD 230 class at BYUI. ">
     <title>Glen's WDD_230 Portal Home Page</title>
-    <style>
+    <!--<style>
         body {
             font-family: 'Nunito Sans', Arial, Helvetica, sans-serif;
             max-width: 900px;
             margin: 0 auto;
             padding: 1em;
             color: #4b4b4b;
-            
+
         }
 
         header {
@@ -43,7 +43,7 @@
             grid-column: 4 / 5;
             box-shadow: 1px 1px 20px black, -1px -1px 20px black;
             margin-top: 10px;
-            
+
             ;
         }
 
@@ -63,16 +63,18 @@
             font-size: .75em;
             height: 4em;
         }
+
         .footerlong {
             margin-bottom: 0px;
             padding-top: .75em;
         }
+
         .makeyellow {
             color: #cba811;
             margin-top: 0px;
             padding-top: .5em;
         }
-    </style>
+    </style>-->
 </head>
 
 <body>
@@ -89,11 +91,12 @@
         </ul>
     </main>
     <footer>
-        <p class="footerlong">&#169 <span id="outputspan"></span> | Glen Meredith | Massachusetts | <a
-                href="https://www.byui.edu/online"><u>BYUI Online Learning</u></a></p>
+        <p class="footerlong">&#169; <span id="outputspan"></span> | Glen Meredith | Massachusetts |
+            <a href="https://www.byui.edu/online"><u>BYUI Online Learning</u></a></p>
         <p class="makeyellow">Last Modified: <span id="lastmod"></span></p>
     </footer>
 </body>
+
 <script>
     function getDate() {
         let d = new Date().getFullYear();
