--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/portalstyle.css">
+    <link rel="stylesheet" href="css/portalmedium.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap">
     <meta charset="UTF-8">
@@ -79,8 +80,8 @@
 
 <body>
     <header>
-        <h1>Glen Meredith</h1>
         <img src="images/Webp.net-resizeimage.jpg" alt="Glen smiling">
+        <h1>Glen Meredith</h1>
     </header>
     <main>
         <h2>WDD 230: Assignment Portal</h2>
