--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <main>
         <h2>WDD 230: Assignment Portal</h2>
         <ul>
-            <li>Lesson 02:</li>
+            <li>Lesson 02: <a href="https://glenmeredith68.github.io/lesson02/html/design-principles.html">Design Principles</a></li>
             <li>Lesson 03:</li>
             <li>Lesson 04:</li>
         </ul>
