--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <h2>WDD 230: Assignment Portal</h2>
         <ul>
             <li>Lesson 02: <a href="https://glenmeredith68.github.io/lesson02/html/design-principles.html">Design Principles</a></li>
-            <li><a href='https://glenmeredith68.github.io/lesson03/index.html'>Lesson 03: Fishing In Medway Site Planning</a></li>
+            <li>Lesson 03: <a href='https://glenmeredith68.github.io/lesson03/index.html'>Fishing In Medway Site Planning</a></li>
             <li>Lesson 04:</li>
         </ul>
     </main>
