--- a/lesson03/index.html
+++ b/lesson03/index.html
@@ -13,7 +13,7 @@
         href="https://fonts.googleapis.com/css2?family=Alegreya+SC:wght@500&family=Alegreya:wght@400;500&display=swap"
         rel="stylesheet">
     <script src="../lesson03/js/fishingInMedway.js"></script>
-    <title>Fishing in Medway</title>
+    <title>Fishing in Medway - Home</title>
 </head>
 
 <body>
