fixed typography title

--- a/lesson03/typography.html
+++ b/lesson03/typography.html
@@ -13,7 +13,7 @@
         href="https://fonts.googleapis.com/css2?family=Alegreya+SC:wght@500&family=Alegreya:wght@400;500&display=swap"
         rel="stylesheet">
     <script src="../lesson03/js/fishingInMedway.js"></script>
-    <title>Fishing in Medway</title>
+    <title>Fishing in Medway - Typography</title>
 </head>
 
 <body>
@@ -21,7 +21,7 @@
         <div class='mobilenavtopgrid'>
             <a href="index.html"><img src="../lesson03/images/iconfinder__Fish_754632.svg"
                     alt="Fish Logo" id='logo'></a>
-            <h1>Fishing in Medway - Typography</h1>
+            <h1>Fishing in Medway</h1>
         </div>
         <div class="mainnavbottomgrid">
             <h2>Conditions and spots for fishing in Medway, MA</h2>
