fixed target audience title

--- a/lesson03/target-audience.html
+++ b/lesson03/target-audience.html
@@ -21,7 +21,7 @@
         <div class='mobilenavtopgrid'>
             <a href="index.html"><img src="../lesson03/images/iconfinder__Fish_754632.svg"
                     alt="Fish Logo" id='logo'></a>
-            <h1>Fishing in Medway - Target Audience</h1>
+            <h1>Fishing in Medway</h1>
         </div>
         <div class="mainnavbottomgrid">
             <h2>Conditions and spots for fishing in Medway, MA</h2>
