--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="This is the page for Glen Meredith to post assignments completed for the WDD 230 class at BYUI. ">
+    <link rel="shortcut icon" href="images/glenFavicon.ico">
     <title>Glen's WDD_230 Portal Home Page</title>
+
     <!--<style>
         body {
             font-family: 'Nunito Sans', Arial, Helvetica, sans-serif;
@@ -88,7 +90,7 @@
         <ul>
             <li>Lesson 02: <a href="https://glenmeredith68.github.io/lesson02/html/design-principles.html">Design Principles</a></li>
             <li>Lesson 03: <a href='https://glenmeredith68.github.io/lesson03/index.html'>Fishing In Medway Site Planning</a></li>
-            <li>Lesson 04:</li>
+            <li>Lesson 04: <a href="https://glenmeredith68.github.io/lesson04/preston-4.html">Preston Sun: We don't hide behind clouds</a></li>
         </ul>
     </main>
     <footer>
