fixed hero grid to absolute and relative positioning.

--- a/lesson04/preston-4.html
+++ b/lesson04/preston-4.html
@@ -45,11 +45,11 @@
             <img id='hero' src="https://source.unsplash.com/random/900x300" alt="PLACEHOLDER">
             <div class="summarybox">
                 <h3>Weather Summary</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                <p>Lorem ipsum dolor sit amet<span class='elipsis'>...</span><span class='mediumsummary'>, consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt
-                    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                    ut labore et dolore magna aliqua. </span><span class='bigsummary'>Ut enim ad minim veniam, quis nostrud
                     exercitation
-                    ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></p>
             </div>
         </div>
 
