--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <li>Lesson 02: <a href="https://glenmeredith68.github.io/lesson02/html/design-principles.html">Design Principles</a></li>
             <li>Lesson 03: <a href='https://glenmeredith68.github.io/lesson03/index.html'>Fishing In Medway Site Planning</a></li>
             <li>Lesson 04: <a href="https://glenmeredith68.github.io/lesson04/preston-4.html">Preston Sun: We don't hide behind clouds</a></li>
-            <li>Lesson 05: <a href="https://glenmeredith68.github.io/lesson05/preston-5.html">Preston Sun: We don't hide behind clouds</a> New and Improved bby</li>
+            <li>Lesson 05: <a href="https://glenmeredith68.github.io/lesson05/preston-5.html">Preston Sun: We don't hide behind clouds</a> New and Improved</li>
         </ul>
     </main>
     <footer>
