web font loader

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/portalstyle.css">
     <link rel="stylesheet" href="css/portalmedium.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap">
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap"> -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
@@ -88,17 +88,35 @@
     <main>
         <h2>WDD 230: Assignment Portal</h2>
         <ul>
-            <li>Lesson 02: <a href="https://glenmeredith68.github.io/lesson02/html/design-principles.html">Design Principles</a></li>
-            <li>Lesson 03: <a href='https://glenmeredith68.github.io/lesson03/index.html'>Fishing In Medway Site Planning</a></li>
-            <li>Lesson 04: <a href="https://glenmeredith68.github.io/lesson04/preston-4.html">Preston Sun: We don't hide behind clouds</a></li>
-            <li>Lesson 05: <a href="https://glenmeredith68.github.io/lesson05/preston-5.html">Preston Sun: We don't hide behind clouds</a> New and Improved</li>
+            <li>Lesson 02: <a
+                    href="https://glenmeredith68.github.io/lesson02/html/design-principles.html">Design
+                    Principles</a></li>
+            <li>Lesson 03: <a href='https://glenmeredith68.github.io/lesson03/index.html'>Fishing In
+                    Medway Site Planning</a></li>
+            <li>Lesson 04: <a
+                    href="https://glenmeredith68.github.io/lesson04/preston-4.html">Preston Sun: We
+                    don't hide behind clouds</a></li>
+            <li>Lesson 05: <a
+                    href="https://glenmeredith68.github.io/lesson05/preston-5.html">Preston Sun: We
+                    don't hide behind clouds</a> New and Improved</li>
         </ul>
     </main>
     <footer>
         <p class="footerlong">&#169; <span id="outputspan"></span> | Glen Meredith | Massachusetts |
-            <a href="https://www.byui.edu/online"><u>BYUI Online Learning</u></a></p>
+            <a href="https://www.byui.edu/online"><u>BYUI Online Learning</u></a>
+        </p>
         <p class="makeyellow">Last Modified: <span id="lastmod"></span></p>
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+    <script>
+        WebFont.load({
+            google: {
+                families: [
+                    'Nunito Sans'
+                ]
+            }
+        });
+    </script>
 </body>
 
 <script>
