--- a/lesson06/preston-6.html
+++ b/lesson06/preston-6.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="css/preston-6.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"> -->
     <!-- <link
         href="https://fonts.googleapis.com/css2?family=Alegreya+SC:wght@500&family=Alegreya:wght@400;500&display=swap"
         rel="stylesheet"> -->
@@ -42,7 +44,12 @@
     <main>
         <h2>Preston, Idaho</h2>
         <div class="heroimg">
-            <img id='hero' src='images/prestonHero.jpeg' alt="Dramatic mountains with great beauty">
+            <!-- <img id='hero' src='images/prestonHero.jpeg' alt="Dramatic mountains with great beauty"> -->
+            <picture>
+                    <source srcset='images/franklinMedium.jpeg' media='(min-width: 595px) and (max-width: 899px)'>
+                        <source srcset='images/franklinLarge.jpeg' media='(min-width: 900px)'>
+                <img src="images/franklinSmall.jpeg" alt="Picture of Franklin" id='hero' >
+            </picture>
             <div class="summarybox">
                 <h3>Weather Summary</h3>
                 <div class="conditionsbox">
@@ -50,19 +57,22 @@
                         <p>Currently: </p><span class='currently'>Sunny</span>
                     </div>
                     <div class="conditions">
-                        <p>High: </p><span><span class='currently' id='currenttemp'>76</span><span>ºF</span></span>
+                        <p>High: </p><span><span class='currently'
+                                id='currenttemp'>36</span><span>ºF</span></span>
                     </div>
                     <div class="conditions">
                         <p>Low: </p><span class='currently'>26 ºF</span>
                     </div>
                     <div class="conditions">
-                        <p>Wind Chill: </p><span class='currently' id='windchill'> ºF</span>
+                        <p>Wind Chill: </p><span><span class='currently'
+                                id='windchill'></span><span>ºF</span></span>
                     </div>
                     <div class="conditions">
                         <p>Humidity: </p><span class='currently'>69%</span>
                     </div>
                     <div class="conditions">
-                        <p>Wind Speed: </p><span class='currently' id='windspeed'>5<span>mph</span></span>
+                        <p>Wind Speed: </p><span class='currently' id='windspeed'>5<span>
+                                mph</span></span>
                     </div>
                 </div>
             </div>
@@ -80,23 +90,28 @@
         </div>
         <div class='articlebox'>
             <h4><a class='readmore' target='_blank'
-                href="https://www.prestonidaho.net/mayor-city-council/"> A Message From the Mayor</a>
+                    href="https://www.prestonidaho.net/mayor-city-council/"> A Message From the
+                    Mayor</a>
             </h4>
             <img id='bigarticlepic' src='images/prestonArticlePic.jpg'
                 alt="Quaint Preston with sunset">
             <p class='smallarticlep'> Preston is an agricultural community located on the most
                 northern side of the pristine Cache Valley touting views that can arguably be
-                unmatched. <span class='boldwords'>Cache Valley</span> is also known as “Bridgerland”, which was discovered and
+                unmatched. <span class='boldwords'>Cache Valley</span> is also known as
+                “Bridgerland”, which was discovered and
                 explored by the famous American mountain man Jim Bridger nearly 200 years ago. </p>
-            <p class="bigarticlep">&nbsp;&nbsp;&nbsp;&nbsp;"<span class='boldwords'>Preston</span> is an agricultural community located on the most
+            <p class="bigarticlep">&nbsp;&nbsp;&nbsp;&nbsp;"<span class='boldwords'>Preston</span>
+                is an agricultural community located on the most
                 northern side of the pristine Cache Valley touting views that can arguably be
                 unmatched. Cache Valley is also known as “Bridgerland”, which was discovered and
                 explored by the famous American mountain man Jim Bridger nearly 200 years ago. All
                 throughout the year Preston serves as the primary hub to the most rewarding family
                 outdoor activities found in the upper intermountain west. These activities include:
-                <span class="boldwords">snowmobiling</span> in Strawberry Canyon, feeding the family at numerous local fast food
+                <span class="boldwords">snowmobiling</span> in Strawberry Canyon, feeding the family
+                at numerous local fast food
                 restaurants before driving 15 minutes to the only ski resort in Cache Valley.
-                Filling your boat and/or ATV before <span class='boldwords'>waterskiing</span> and <span class="boldwords">fishing</span> on the multiple
+                Filling your boat and/or ATV before <span class='boldwords'>waterskiing</span> and
+                <span class="boldwords">fishing</span> on the multiple
                 reservoirs, streams and rivers that also include hunting, hiking and camping into
                 the Cache & Caribou National Forests..."
             </p>
@@ -127,14 +142,15 @@
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script>
         WebFont.load({
-  google: {
-    families: [
-       'Alegreya', 'Alegreya SC'
-    ]
-  }
-});
+            google: {
+                families: [
+                    'Alegreya', 'Alegreya SC', 'Material Icons'
+                ]
+            }
+        });
     </script>
 </body>
 <script src="preston-6.js"></script>
+<script src="windChill.js"></script>
 
 </html>
