--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <li>Lesson 05: <a
                     href="https://glenmeredith68.github.io/lesson05/preston-5.html">Preston Sun: We
                     don't hide behind clouds</a> New and Improved</li>
-            <li>Lesson 06: <a href="https://glenmeredith68.github.io/lesson06/preston-6.html"></a></li>
+            <li>Lesson 06: <a href="https://glenmeredith68.github.io/lesson06/preston-6.html">Preston Sun: Srcset Edition</a></li>
         </ul>
     </main>
     <footer>
