--- a/lesson07/lazyload.html
+++ b/lesson07/lazyload.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lazy Load</title>
 </head>
 <body>
     <div class="placeholder-loading"><img src="http://unsplash.it/400" alt="" class="loading" loading="lazy"></div>
