added favicons and gallery to portal

--- a/index.html
+++ b/index.html
@@ -13,71 +13,6 @@
         content="This is the page for Glen Meredith to post assignments completed for the WDD 230 class at BYUI. ">
     <link rel="shortcut icon" href="images/glenFavicon.ico">
     <title>Glen's WDD_230 Portal Home Page</title>
-
-    <!--<style>
-        body {
-            font-family: 'Nunito Sans', Arial, Helvetica, sans-serif;
-            max-width: 900px;
-            margin: 0 auto;
-            padding: 1em;
-            color: #4b4b4b;
-
-        }
-
-        header {
-            background-color: #643219;
-            border-radius: 15px;
-            display: grid;
-            grid-template-columns: auto auto auto 150px;
-            max-height: 6em;
-        }
-
-        header h1 {
-            color: white;
-            font-size: 3em;
-            grid-column: 1 / 4;
-            text-align: center;
-            padding-bottom: 0px;
-            margin-top: .5em;
-
-        }
-
-        header img {
-            grid-column: 4 / 5;
-            box-shadow: 1px 1px 20px black, -1px -1px 20px black;
-            margin-top: 10px;
-
-            ;
-        }
-
-        main {}
-
-        main h2 {
-            font-size: 2em;
-            font-weight: bold;
-            border-bottom: 1px solid black;
-        }
-
-        footer {
-            background-color: #643219;
-            border-radius: 10px;
-            color: white;
-            text-align: center;
-            font-size: .75em;
-            height: 4em;
-        }
-
-        .footerlong {
-            margin-bottom: 0px;
-            padding-top: .75em;
-        }
-
-        .makeyellow {
-            color: #cba811;
-            margin-top: 0px;
-            padding-top: .5em;
-        }
-    </style>-->
 </head>
 
 <body>
@@ -100,6 +35,7 @@
                     href="https://glenmeredith68.github.io/lesson05/preston-5.html">Preston Sun: We
                     don't hide behind clouds</a> New and Improved</li>
             <li>Lesson 06: <a href="https://glenmeredith68.github.io/lesson06/preston-6.html">Preston Sun: Srcset Edition</a></li>
+            <li>Lesson 07: <a href="https://glenmeredith68.github.io/lesson07/gallery-7.html">Preston Sun: Weather Gallery</a></li>
         </ul>
     </main>
     <footer>
