added favicons and gallery to portal

--- a/lesson07/gallery-7.html
+++ b/lesson07/gallery-7.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="css/preston-7.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="shortcut icon" href="images/sunLogo.png">
     <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"> -->
     <!-- <link
         href="https://fonts.googleapis.com/css2?family=Alegreya+SC:wght@500&family=Alegreya:wght@400;500&display=swap"
         rel="stylesheet"> -->
-    <title>Preston Sun</title>
+    <title>Preston Sun: Weather Gallery</title>
 </head>
 
 <body>
