added table build to portal

--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
                     don't hide behind clouds</a> New and Improved</li>
             <li>Lesson 06: <a href="https://glenmeredith68.github.io/lesson06/preston-6.html">Preston Sun: Srcset Edition</a></li>
             <li>Lesson 07: <a href="https://glenmeredith68.github.io/lesson07/gallery-7.html">Preston Sun: Weather Gallery</a></li>
+            <li>Lesson 08: 
+                <ul>
+                    <li><a href="https://glenmeredith68.github.io/lesson08/tablebuild.html">Table Build Assignment</a> </li>
+                    <!-- <li></li> -->
+                </ul></li>
+        </ul>
         </ul>
     </main>
     <footer>
