added storm center to portal

--- a/lesson08/stormcenter-8.html
+++ b/lesson08/stormcenter-8.html
@@ -14,7 +14,7 @@
     <!-- <link
         href="https://fonts.googleapis.com/css2?family=Alegreya+SC:wght@500&family=Alegreya:wght@400;500&display=swap"
         rel="stylesheet"> -->
-    <title>Preston Sun</title>
+    <title>Preston Sun: Storm Center</title>
 </head>
 
 <body>
