--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <li>Lesson 08: 
                 <ul>
                     <li><a href="https://glenmeredith68.github.io/lesson08/tablebuild.html">Table Build Assignment</a> </li>
-                    <!-- <li></li> -->
+                    <li><a href="https://glenmeredith68.github.io/lesson08/stormcenter-8.html"></a>Preston Sun: Storm Center</li>
                 </ul></li>
         </ul>
         </ul>
